tests/fixtures/errors/invalid_arrow_variant_tokenization.puml
@startuml
participant A
participant B
A -/-> B: malformed
@enduml
